Fixed flickering when scrolling bug (was just because of some hidden elements. And add a transition to the .active class for the Scrollspy

--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -6,7 +6,7 @@
     background-color: transparent;
     font-size: 16px;
     line-height: 16px;
-    font-weight: 700;
+    font-weight: 400;
     text-transform: uppercase;
     padding: 10px 16px;
 }
