--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -7,6 +7,7 @@
     background-color: #000;
     font-size: 14px;
     font-weight: 700;
+    transition: all 0.5s ease-in-out;
 }
 
 #spx-navbar .navbar-collapse {
@@ -28,6 +29,11 @@
 #spx-navbar .nav li a:focus,
 #spx-navbar .nav li a:active {
     background: none;
+}
+
+#spx-navbar .nav li {
+    background-color: transparent;
+    transition: all 0.2s ease-in-out;
 }
 
 #spx-navbar .nav li a:hover,
@@ -54,7 +60,6 @@
         border-top: none;
         border-bottom: $borders transparent;
         background-color: transparent;
-        transition: all 0.5s ease-in-out;
     }
     #spx-navbar .navbar-nav li a {
         padding-top: 15px;
